--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love River Monitoring Dashboard</title>
+    <title>River Monitoring Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body, html {
@@ -56,12 +56,12 @@
     <div class="main-content">
         <div class="card text-center full-screen-card border-success" id="riverCard">
             <div class="card-header bg-success text-white py-4">
-                <h2 class="mb-0">River name placeholder</h2>
+                <h2 id="riverNameTitle" class="mb-0">Unknown River</h2>
                 <span class="badge bg-light text-success status-badge-large mt-2">Normal Level</span>
             </div>
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
                 <p class="card-text text-muted mb-2">Current Water Level</p>
-                <h1 class="card-title-level text-success mb-3">N/A</h1>
+                <h1 class="card-title-level text-success mb-3"><span id="waterLevel"></span> m</h1>
 
                 <img id="realtimeImage" style="object-fit: contain" class="w-100 mt-4">
 
@@ -89,22 +89,24 @@
             document.getElementById('floodThreshold').textContent = floodThreshold;
 
             const card = document.getElementById('riverCard');
-            const levelElement = card.querySelector('.card-title-level');
+            const levelElement = document.getElementById('waterLevel');
             const statusBadge = card.querySelector('.status-badge-large');
             const cardHeader = card.querySelector('.card-header');
             const realtimeImage = document.getElementById("realtimeImage");
+            const riverNameTitle = document.getElementById("riverNameTitle");
                 
             function updateRiverData() {
-                fetch("https://project-0331.eastasia.cloudapp.azure.com/api/retrieve", {
+                fetch("/api/retrieve", {
                     "method": "POST",
                     "headers": {
                         "Content-Type": "application/json",
                     },
                     "body": JSON.stringify({})
                 }).then(resp => resp.json()).then(resp => {
-                    currentLevel = resp[0]["depth"];
+                    currentLevel = resp[0]["est_level"];
 
-                    levelElement.textContent = `${currentLevel.toFixed(2)} m`;
+                    riverNameTitle.textContent = resp[0]["river_name"];
+                    levelElement.textContent = currentLevel.toFixed(2);
                     realtimeImage.setAttribute("src", `/api/image/${resp[0]["timestamp"]}`);
 
                     // Update status and colors
@@ -114,13 +116,13 @@
                     statusBadge.classList.remove('bg-light', 'text-success', 'text-warning', 'text-danger');
                     statusBadge.classList.add('bg-light'); // Always light background for badge text
 
-                    if (parseFloat(currentLevel) >= floodThreshold) {
+                    if (currentLevel >= floodThreshold) {
                         statusBadge.textContent = 'Flood Level';
                         card.classList.add('border-danger');
                         cardHeader.classList.add('bg-danger', 'text-white');
                         levelElement.classList.add('text-danger');
                         statusBadge.classList.add('text-danger');
-                    } else if (parseFloat(currentLevel) >= alertThreshold) {
+                    } else if (currentLevel >= alertThreshold) {
                         statusBadge.textContent = 'Alert Level';
                         card.classList.add('border-warning');
                         cardHeader.classList.add('bg-warning', 'text-dark');
@@ -137,7 +139,7 @@
             }
 
             updateRiverData(); // Initial load
-            setInterval(() => updateRiverData(), 10000); // Update every 10 seconds
+            setInterval(() => updateRiverData(), 10_000); // Update every 10 seconds
         })();
     </script>
 </body>
