--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const alertThreshold = 3.5;
-        const floodThreshold = 4.0;
-        
+        let alertThreshold = 3.5;
+        let floodThreshold = 4.0;
+
         (() => {
 
             document.getElementById('alertThreshold').textContent = alertThreshold;
