--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         console.log(realtimeImage.width);
                         ctx.drawImage(realtimeImage, 0, 0, realtimeImage.width, realtimeImage.height, 0, 0, realtimeImageCanvas.width, realtimeImageCanvas.height);
                         
-                        ctx.setFillColor(0, 0, 255, 0.2);
+                        ctx.fillStyle = "rgba(0, 0, 255, 0.2)";
                         ctx.beginPath();
                         ctx.moveTo(
                             resp[0]["points"][0][0] * realtimeImageCanvas.width, 
