Add line width setting for canvas rendering to enhance stroke visibility

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                         
                         ctx.fillStyle = "rgba(0, 0, 255, 0.2)";
                         ctx.strokeStyle = "rgba(0, 0, 255, 0.8)";
+                        ctx.lineWidth = 3;
                         ctx.beginPath();
                         ctx.moveTo(
                             resp[0]["points"][0][0] * realtimeImageCanvas.width, 
