Add stroke call to canvas rendering for improved visual output

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                             );
                         }
                         ctx.closePath();
+                        ctx.stroke();
                         ctx.fill();
                     };
                     realtimeImage.src = `/api/image/${resp[0]["timestamp"]}`;
