--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,64 +16,108 @@
             flex: 1;
             display: flex;
             justify-content: center;
-            align-items: center;
-            padding: 20px; /* Add some padding around the card */
+            align-items: flex-start;
+            padding: 30px 10px;
         }
-        .full-screen-card {
-            max-width: 900px; /* Max width for large screens */
-            width: 90%; /* Occupy 90% of the container width */
-            min-height: 70vh; /* Occupy 70% of viewport height */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        .dashboard-grid {
+            width: 100%;
+            max-width: 1100px;
         }
         .card-title-level {
-            font-size: 4rem; /* Very large font for water level */
+            font-size: 3rem;
             font-weight: bold;
         }
         .status-badge-large {
-            font-size: 1.5rem;
-            padding: .5em 1em;
+            font-size: 1.2rem;
+            padding: .4em 1em;
         }
         .graph-placeholder {
-            min-height: 250px; /* Larger area for the graph */
+            min-height: 250px;
             background-color: #e9ecef;
             border-radius: .3rem;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 15px;
+            margin-top: 10px;
             color: #6c757d;
+        }
+        /* Card floating effect */
+        .card {
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+        .card:hover {
+            transform: translateY(-8px) scale(1.03);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.18), 0 1.5px 6px rgba(0,0,0,0.10);
+            z-index: 2;
         }
     </style>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand fs-4" href="#">River Water-Level Monitoring</a>
+            <a class="navbar-brand" href="#">River Water-Level Monitoring</a>
         </div>
     </nav>
 
     <div class="main-content">
-        <div class="card text-center full-screen-card border-success" id="riverCard">
-            <div class="card-header bg-success text-white py-4">
-                <h2 id="riverNameTitle" class="mb-0">Unknown River</h2>
-                <span class="badge bg-light text-success status-badge-large mt-2">Normal Level</span>
-            </div>
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                <p class="card-text text-muted mb-2">Current Water Level</p>
-                <h1 class="card-title-level text-success mb-3"><span id="waterLevel"></span> m</h1>
-
-                <canvas id="realtimeImageCanvas" class="w-100 mt-4 graph-placeholder"></canvas>
-
-                <div class="row w-100 mt-4">
-                    <div class="col-md-6">
-                        <p class="mb-1"><strong>Alert Threshold:</strong> <span id="alertThreshold"></span> m</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="mb-1"><strong>Flood Threshold:</strong> <span id="floodThreshold"></span> m</p>
+        <div class="container dashboard-grid">
+            <div class="row g-4">
+                <!-- River Info Card -->
+                <div class="col-md-6">
+                    <div class="card h-100" id="riverInfoCard">
+                        <div class="card-header text-bg-primary">
+                            River Info
+                        </div>
+                        <div class="card-body text-center">
+                            <h3 id="riverNameTitle" class="mb-2">Unknown River</h3>
+                            <hr>
+                            <div class="row">
+                                <div class="col-6">
+                                    <p class="mb-1"><strong>Country:</strong> <span id="countryName"></span></p>
+                                </div>
+                                <div class="col-6">
+                                    <p class="mb-1"><strong>Basin:</strong> <span id="basinName"></span></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
+                <!-- Water Level Card -->
+                <div class="col-md-6">
+                    <div class="card border-success h-100" id="waterLevelCard">
+                        <div class="card-header text-bg-success text-white" id="waterLevelHeader">
+                            Water Level
+                        </div>
+                        <div class="card-body text-center">
+                            <p class="card-text text-muted mb-2">Current Water Level</p>
+                            <h1 class="card-title-level text-success mb-3"><span id="waterLevel"></span> m</h1>
+                            <span class="badge text-bg-success status-badge-large mb-2" id="statusBadge">Normal Level</span>
+                            <hr>
+                            <div class="row">
+                                <div class="col-6">
+                                    <p class="mb-1"><strong>Alert Threshold:</strong> <span id="alertThreshold"></span> m</p>
+                                </div>
+                                <div class="col-6">
+                                    <p class="mb-1"><strong>Flood Threshold:</strong> <span id="floodThreshold"></span> m</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- New row for Realtime Image Card -->
+            <div class="row g-4 mt-1">
+                <div class="col-12">
+                    <div class="card h-100">
+                        <div class="card-header text-bg-primary">
+                            Realtime Image
+                        </div>
+                        <div class="card-body">
+                            <canvas id="realtimeImageCanvas" class="w-100 graph-placeholder"></canvas>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -84,16 +128,18 @@
         let floodThreshold = 4.0;
 
         (() => {
-
             document.getElementById('alertThreshold').textContent = alertThreshold;
             document.getElementById('floodThreshold').textContent = floodThreshold;
 
-            const card = document.getElementById('riverCard');
+            const riverInfoCard = document.getElementById('riverInfoCard');
+            const waterLevelCard = document.getElementById('waterLevelCard');
+            const waterLevelHeader = document.getElementById('waterLevelHeader');
             const levelElement = document.getElementById('waterLevel');
-            const statusBadge = card.querySelector('.status-badge-large');
-            const cardHeader = card.querySelector('.card-header');
+            const statusBadge = document.getElementById('statusBadge');
             const riverNameTitle = document.getElementById("riverNameTitle");
-                
+            const riverCountry = document.getElementById("riverCountry");
+            const riverBasin = document.getElementById("riverBasin");
+
             function updateRiverData() {
                 fetch("/api/retrieve", {
                     "method": "POST",
@@ -105,31 +151,31 @@
                     currentLevel = resp[0]["est_level"];
 
                     riverNameTitle.textContent = resp[0]["river_name"];
+                    riverCountry.textContent = resp[0]["country_name"] || "N/A";
+                    riverBasin.textContent = resp[0]["basin_name"] || "N/A";
                     levelElement.textContent = currentLevel.toFixed(2);
 
-                    // Update status and colors
-                    card.classList.remove('border-success', 'border-warning', 'border-danger');
-                    cardHeader.classList.remove('bg-success', 'bg-warning', 'bg-danger', 'text-white', 'text-dark');
+                    waterLevelCard.classList.remove('border-success', 'border-warning', 'border-danger');
+                    waterLevelHeader.classList.remove('text-bg-success', 'text-bg-warning', 'text-bg-danger');
                     levelElement.parentElement.classList.remove('text-success', 'text-warning', 'text-danger');
-                    statusBadge.classList.remove('bg-light', 'text-success', 'text-warning', 'text-danger');
-                    statusBadge.classList.add('bg-light'); // Always light background for badge text
+                    statusBadge.classList.remove('text-bg-success', 'text-bg-warning', 'text-bg-danger');
 
                     if (currentLevel >= floodThreshold) {
                         statusBadge.textContent = 'Flood Level';
-                        card.classList.add('border-danger');
-                        cardHeader.classList.add('bg-danger', 'text-white');
+                        waterLevelCard.classList.add('border-danger');
+                        waterLevelHeader.classList.add('text-bg-danger');
                         levelElement.parentElement.classList.add('text-danger');
                         statusBadge.classList.add('text-danger');
                     } else if (currentLevel >= alertThreshold) {
                         statusBadge.textContent = 'Alert Level';
-                        card.classList.add('border-warning');
-                        cardHeader.classList.add('bg-warning', 'text-dark');
+                        waterLevelCard.classList.add('border-warning');
+                        waterLevelHeader.classList.add('text-bg-warning');
                         levelElement.parentElement.classList.add('text-warning');
                         statusBadge.classList.add('text-warning');
                     } else {
                         statusBadge.textContent = 'Normal Level';
-                        card.classList.add('border-success');
-                        cardHeader.classList.add('bg-success', 'text-white');
+                        waterLevelCard.classList.add('border-success');
+                        waterLevelHeader.classList.add('text-bg-success');
                         levelElement.parentElement.classList.add('text-success');
                         statusBadge.classList.add('text-success');
                     }
@@ -144,18 +190,18 @@
                         ctx.width = realtimeImage.width;
                         ctx.height = realtimeImage.height;
                         ctx.drawImage(realtimeImage, 0, 0, realtimeImage.width, realtimeImage.height, 0, 0, realtimeImageCanvas.width, realtimeImageCanvas.height);
-                        
+
                         ctx.fillStyle = "rgba(0, 0, 255, 0.2)";
                         ctx.strokeStyle = "rgba(0, 0, 255, 0.8)";
                         ctx.lineWidth = 3;
                         ctx.beginPath();
                         ctx.moveTo(
-                            resp[0]["points"][0][0] * realtimeImageCanvas.width, 
+                            resp[0]["points"][0][0] * realtimeImageCanvas.width,
                             resp[0]["points"][0][1] * realtimeImageCanvas.height
                         );
                         for(let point of resp[0]["points"]) {
                             ctx.lineTo(
-                                point[0] * realtimeImageCanvas.width, 
+                                point[0] * realtimeImageCanvas.width,
                                 point[1] * realtimeImageCanvas.height
                             );
                         }
@@ -167,8 +213,8 @@
                 });
             }
 
-            updateRiverData(); // Initial load
-            setInterval(() => updateRiverData(), 10_000); // Update every 10 seconds
+            updateRiverData();
+            setInterval(() => updateRiverData(), 10_000);
         })();
     </script>
 </body>
