Rename river information elements for consistency in data binding

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                             River Info
                         </div>
                         <div class="card-body text-center">
-                            <h3 id="riverNameTitle" class="mb-2">Unknown River</h3>
+                            <h3 id="riverName" class="mb-2">Unknown River</h3>
                             <hr>
                             <div class="row">
                                 <div class="col-6">
-                                    <p class="mb-1"><strong>Country:</strong> <span id="countryName"></span></p>
+                                    <p class="mb-1"><strong>Country:</strong> <span id="riverCountry"></span></p>
                                 </div>
                                 <div class="col-6">
-                                    <p class="mb-1"><strong>Basin:</strong> <span id="basinName"></span></p>
+                                    <p class="mb-1"><strong>Basin:</strong> <span id="riverBasin"></span></p>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
             const waterLevelHeader = document.getElementById('waterLevelHeader');
             const levelElement = document.getElementById('waterLevel');
             const statusBadge = document.getElementById('statusBadge');
-            const riverNameTitle = document.getElementById("riverNameTitle");
+            const riverNameTitle = document.getElementById("riverName");
             const riverCountry = document.getElementById("riverCountry");
             const riverBasin = document.getElementById("riverBasin");
 
