--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             color: #6c757d;
         }
         /* Card floating effect */
-        .card {
+        /* .card {
             transition: transform 0.2s, box-shadow 0.2s;
         }
         .card:hover {
             transform: translateY(-8px) scale(1.03);
             box-shadow: 0 8px 32px rgba(0,0,0,0.18), 0 1.5px 6px rgba(0,0,0,0.10);
             z-index: 2;
-        }
+        } */
     </style>
 </head>
 <body>
