--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             z-index: 2;
         } */
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
@@ -106,6 +107,19 @@
                     </div>
                 </div>
             </div>
+            <!-- New row for Water Level Graph Card -->
+            <div class="row g-4 mt-1">
+                <div class="col-12">
+                    <div class="card h-100">
+                        <div class="card-header text-bg-primary">
+                            Water Level History (Past Hour)
+                        </div>
+                        <div class="card-body">
+                            <canvas id="waterLevelChart" class="w-100" style="min-height:250px;"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- New row for Realtime Image Card -->
             <div class="row g-4 mt-1">
                 <div class="col-12">
@@ -123,6 +137,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         let alertThreshold = 3.5;
         let floodThreshold = 4.0;
@@ -213,8 +228,62 @@
                 });
             }
 
+            // Chart.js: Water Level Past Hour
+            function loadWaterLevelChart() {
+                // Get timestamp for 1 hour ago
+                const now = Math.floor(Date.now() / 1000);
+                const oneHourAgo = now - 3600;
+                fetch("/api/retrieve", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ start: oneHourAgo })
+                })
+                .then(resp => resp.json())
+                .then(data => {
+                    // Assume data is an array of objects with est_level and timestamp
+                    const labels = data.map(d => {
+                        const date = new Date(d.timestamp * 1000);
+                        return date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+                    });
+                    const levels = data.map(d => d.est_level);
+
+                    const ctx = document.getElementById('waterLevelChart').getContext('2d');
+                    new Chart(ctx, {
+                        type: 'line',
+                        data: {
+                            labels: labels,
+                            datasets: [{
+                                label: 'Water Level (m)',
+                                data: levels,
+                                borderColor: '#198754',
+                                backgroundColor: 'rgba(25,135,84,0.1)',
+                                tension: 0.3,
+                                pointRadius: 2,
+                                fill: true
+                            }]
+                        },
+                        options: {
+                            responsive: true,
+                            plugins: {
+                                legend: { display: false }
+                            },
+                            scales: {
+                                x: {
+                                    title: { display: false }
+                                },
+                                y: {
+                                    title: { display: true, text: 'Level (m)' },
+                                    beginAtZero: false
+                                }
+                            }
+                        }
+                    });
+                });
+            }
+
             updateRiverData();
             setInterval(() => updateRiverData(), 10_000);
+            loadWaterLevelChart();
         })();
     </script>
 </body>
