Update water level chart colors for improved visibility

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                             datasets: [{
                                 label: 'Water Level (m)',
                                 data: levels,
-                                borderColor: '#198754',
-                                backgroundColor: 'rgba(25,135,84,0.1)',
+                                borderColor: '#0000ff',
+                                backgroundColor: 'rgba(0, 0, 255, 0.2)',
                                 tension: 0.3,
                                 pointRadius: 2,
                                 fill: true
