--- a/index.html
+++ b/index.html
@@ -284,8 +284,14 @@
                                 },
                                 y: {
                                     title: { display: true, text: 'Level (m)' },
-                                    beginAtZero: false
+                                    beginAtZero: true
                                 }
+                            }
+                        },
+                        scales: {
+                            y: {
+                                min: 0,
+                                max: 10
                             }
                         }
                     });
