Update y-axis scale settings for water level graph to improve data representation

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                         },
                         scales: {
                             y: {
-                                min: 0,
-                                max: 10
+                                min: 10,
+                                max: 50,
                             }
                         }
                     });
