Update y-axis scale settings for water level graph to set maximum value and improve data representation

--- a/index.html
+++ b/index.html
@@ -284,16 +284,11 @@
                                 },
                                 y: {
                                     title: { display: true, text: 'Level (m)' },
-                                    beginAtZero: true
+                                    beginAtZero: true,
+                                    max: 10,
                                 }
                             }
                         },
-                        scales: {
-                            y: {
-                                min: 10,
-                                max: 50,
-                            }
-                        }
                     });
                 });
             }
