--- a/index.html
+++ b/index.html
@@ -108,19 +108,6 @@
                     </div>
                 </div>
             </div>
-            <!-- New row for Water Level Graph Card -->
-            <div class="row g-4 mt-1">
-                <div class="col-12">
-                    <div class="card h-100">
-                        <div class="card-header text-bg-primary">
-                            Water Level History (Past Hour)
-                        </div>
-                        <div class="card-body">
-                            <canvas id="waterLevelChart" class="w-100" style="min-height:250px;"></canvas>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!-- New row for Realtime Image Card -->
             <div class="row g-4 mt-1">
                 <div class="col-12">
@@ -130,6 +117,19 @@
                         </div>
                         <div class="card-body">
                             <canvas id="realtimeImageCanvas" class="w-100 graph-placeholder"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- New row for Water Level Graph Card -->
+            <div class="row g-4 mt-1">
+                <div class="col-12">
+                    <div class="card h-100">
+                        <div class="card-header text-bg-primary">
+                            Water Level History (Past Hour)
+                        </div>
+                        <div class="card-body">
+                            <canvas id="waterLevelChart" class="w-100" style="min-height:250px;"></canvas>
                         </div>
                     </div>
                 </div>
@@ -242,8 +242,7 @@
             // Chart.js: Water Level Past Hour
             function loadWaterLevelChart() {
                 // Get timestamp for 1 hour ago
-                const now = Math.floor(Date.now() / 1000);
-                const oneHourAgo = now - 3600;
+                const oneHourAgo = Math.floor(Date.now() / 1000) - 3600;
                 fetch("/api/retrieve", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
@@ -309,6 +308,7 @@
             updateRiverData();
             setInterval(() => updateRiverData(), 10_000);
             loadWaterLevelChart();
+            setInterval(() => loadWaterLevelChart(), 300_000);
             askNotificationPermission();
         })();
     </script>
